kubernetes-templates/multi-cluster-gateway-templates/httproute.yaml

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-route
  namespace: frontend
  labels:
    gateway: frontend-global
spec:
  hostnames:
  - "store.example.com"
  parentRefs:
  - name: frontend-global   
    

  rules:
  
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: frontend-svc
      port: 8080
